Horizontal overflow fixed AND About Me added. More responsive

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+/* ========================= BODY SECTION ========================= */
 body {
     background-color: rgba(255, 255, 255, 0.044);
     font-family: Tahoma, Arial, Helvetica, sans-serif;
+    margin: 0;
+    width: 100%;
 }
 
-/* ========================= HEADER ========================= */
+/* ========================= BODY SECTION ========================= */
+
+/* ========================= HEADER SECTION ========================= */
 header {
     height: 70px;
     position: fixed;
@@ -40,10 +45,14 @@ header nav a {
     scroll-margin-top: 130px;
 }
 
-/* ========================= MAIN ========================= */
+/* ========================= HEADER SECTION ========================= */
+
+/* ========================= MAIN SECTION ========================= */
+
 main {
     display: grid;
-    width: 70vw;
+    max-width: 1200px;
+    width: 100%;
     margin:130px auto 0 auto;
     color: rgb(0, 0, 0);
     box-sizing: border-box;
@@ -52,13 +61,13 @@ main {
 section{
     margin-bottom: 100px;
 }
+/* ========================= MAIN SECTION ========================= */
 
 /* ========================= START SECTION ========================= */
 
 #Start {
     display: flex;
-    flex-direction: row;
-    margin-inline: 200px;
+    flex-direction: row;padding-inline: 200px;
     gap: 100px;
     justify-content: center;
 }
@@ -70,6 +79,8 @@ section{
 .SocialButtons button {
     margin-right: 10px;
 }
+
+/* ========================= START SECTION ========================= */
 
 /* ========================= EXPERIENCE SECTION ========================= */
 
@@ -124,16 +135,35 @@ li{
     }
 
 }
+/* ========================= EXPERIENCE SECTION ========================= */
+
+/* ========================= ABOUT ME SECTION ========================= */
+#AboutMe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    margin-inline: 120px;
+}
+
+#AboutMe img{
+    width: 400px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+/* ========================= ABOUT ME SECTION ========================= */
 
 /* ========================= FOOTER ========================= */
 
 footer {
     height: 70px;
-    bottom: 0;
-    left: 0;
     width: 100%;
     background: rgb(230, 230, 230);
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
+
+
